@@ -31,14 +31,15 @@ import org.moqui.entity.EntityList;
 import org.moqui.entity.EntityValue;
 import org.moqui.impl.entity.EntityValueBase;
 import org.moqui.impl.screen.ScreenRenderImpl;
+import org.moqui.resource.ResourceReference;
 import org.moqui.util.ContextStack;
 import org.moqui.util.LiteStringMap;
 import org.moqui.util.ObjectUtilities;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.transaction.Synchronization;
-import javax.transaction.Transaction;
+import jakarta.transaction.Synchronization;
+import jakarta.transaction.Transaction;
 import javax.transaction.xa.XAResource;
 import java.io.IOException;
 import java.math.BigDecimal;
@@ -577,7 +578,9 @@ public class ContextJavaUtil {
 
 
     public final static ObjectMapper jacksonMapper = new ObjectMapper()
-            .setSerializationInclusion(JsonInclude.Include.ALWAYS)
+            .setDefaultPropertyInclusion(JsonInclude.Value.construct(
+                        JsonInclude.Include.ALWAYS,
+                        JsonInclude.Include.ALWAYS))
             .enable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS).enable(SerializationFeature.INDENT_OUTPUT)
             .enable(DeserializationFeature.USE_BIG_DECIMAL_FOR_FLOATS)
             .configure(JsonGenerator.Feature.WRITE_BIGDECIMAL_AS_PLAIN, true);
@@ -586,6 +589,7 @@ public class ContextJavaUtil {
         SimpleModule module = new SimpleModule();
         module.addSerializer(GString.class, new ContextJavaUtil.GStringJsonSerializer());
         module.addSerializer(LiteStringMap.class, new ContextJavaUtil.LiteStringMapJsonSerializer());
+        module.addSerializer(ResourceReference.class, new ContextJavaUtil.ResourceReferenceJsonSerializer());
         jacksonMapper.registerModule(module);
     }
     static class GStringJsonSerializer extends StdSerializer<GString> {
@@ -617,31 +621,57 @@ public class ContextJavaUtil {
             if (lsm != null) {
                 int size = lsm.size();
                 for (int i = 0; i < size; i++) {
-                    gen.writeObjectField(lsm.getKey(i), lsm.getValue(i));
+                    String key = lsm.getKey(i);
+                    Object value = lsm.getValue(i);
+                    // sparse maps could have null keys at certain indexes
+                    if (key == null) continue;
+                    gen.writeObjectField(key, value);
                 }
             }
             gen.writeEndObject();
         }
     }
+    static class ResourceReferenceJsonSerializer extends StdSerializer<ResourceReference> {
+        ResourceReferenceJsonSerializer() { super(ResourceReference.class); }
+        @Override public void serialize(ResourceReference resourceRef, JsonGenerator gen, SerializerProvider serializers)
+                throws IOException, JsonProcessingException {
+            if (resourceRef == null) {
+                gen.writeNull();
+                return;
+            }
+            gen.writeStartObject();
+            gen.writeObjectField("location", resourceRef.getLocation());
+            gen.writeObjectField("isDirectory", resourceRef.isDirectory());
+            gen.writeObjectField("lastModified", resourceRef.getLastModified());
+            ResourceReference.Version currentVersion = resourceRef.getCurrentVersion();
+            if (currentVersion != null) gen.writeObjectField("currentVersionName", currentVersion.getVersionName());
+            gen.writeEndObject();
+        }
+    }
 
     // NOTE: using unbound LinkedBlockingQueue, so max pool size in ThreadPoolExecutor has no effect
-    static class WorkerThreadFactory implements ThreadFactory {
+    public static class WorkerThreadFactory implements ThreadFactory {
         private final ThreadGroup workerGroup = new ThreadGroup("MoquiWorkers");
         private final AtomicInteger threadNumber = new AtomicInteger(1);
         public Thread newThread(Runnable r) { return new Thread(workerGroup, r, "MoquiWorker-" + threadNumber.getAndIncrement()); }
     }
-    static class WorkerThreadPoolExecutor extends ThreadPoolExecutor {
+    public static class JobThreadFactory implements ThreadFactory {
+        private final ThreadGroup workerGroup = new ThreadGroup("MoquiJobs");
+        private final AtomicInteger threadNumber = new AtomicInteger(1);
+        public Thread newThread(Runnable r) { return new Thread(workerGroup, r, "MoquiJob-" + threadNumber.getAndIncrement()); }
+    }
+    public static class WorkerThreadPoolExecutor extends ThreadPoolExecutor {
         private ExecutionContextFactoryImpl ecfi;
         public WorkerThreadPoolExecutor(ExecutionContextFactoryImpl ecfi, int coreSize, int maxSize, long aliveTime,
-                                 TimeUnit timeUnit, BlockingQueue<Runnable> blockingQueue) {
-            super(coreSize, maxSize, aliveTime, timeUnit, blockingQueue, new WorkerThreadFactory());
+                                        TimeUnit timeUnit, BlockingQueue<Runnable> blockingQueue, ThreadFactory threadFactory) {
+            super(coreSize, maxSize, aliveTime, timeUnit, blockingQueue, threadFactory);
             this.ecfi = ecfi;
         }
 
         @Override protected void afterExecute(Runnable runnable, Throwable throwable) {
             ExecutionContextImpl activeEc = ecfi.activeContext.get();
             if (activeEc != null) {
-                logger.warn("In WorkerThreadPoolExecutor.afterExecute() there is still an ExecutionContext for runnable " + runnable.getClass().getName() + " in thread (" + Thread.currentThread().getId() + ":" + Thread.currentThread().getName() + "), destroying");
+                logger.warn("In WorkerThreadPoolExecutor.afterExecute() there is still an ExecutionContext for runnable " + runnable.getClass().getName() + " in thread (" + Thread.currentThread().threadId() + ":" + Thread.currentThread().getName() + "), destroying");
                 try {
                     activeEc.destroy();
                 } catch (Throwable t) {
@@ -667,17 +697,17 @@ public class ContextJavaUtil {
         private final AtomicInteger threadNumber = new AtomicInteger(1);
         public Thread newThread(Runnable r) { return new Thread(workerGroup, r, "MoquiScheduled-" + threadNumber.getAndIncrement()); }
     }
-    static class CustomScheduledTask<V> implements RunnableScheduledFuture<V> {
+    public static class CustomScheduledTask<V> implements RunnableScheduledFuture<V> {
         public final Runnable runnable;
         public final Callable<V> callable;
         public final RunnableScheduledFuture<V> future;
 
-        CustomScheduledTask(Runnable runnable, RunnableScheduledFuture<V> future) {
+        public CustomScheduledTask(Runnable runnable, RunnableScheduledFuture<V> future) {
             this.runnable = runnable;
             this.callable = null;
             this.future = future;
         }
-        CustomScheduledTask(Callable<V> callable, RunnableScheduledFuture<V> future) {
+        public CustomScheduledTask(Callable<V> callable, RunnableScheduledFuture<V> future) {
             this.runnable = null;
             this.callable = callable;
             this.future = future;
@@ -701,15 +731,19 @@ public class ContextJavaUtil {
 
         @Override public V get() throws InterruptedException, ExecutionException { return future.get(); }
         @Override public V get(long l, @NotNull TimeUnit timeUnit) throws InterruptedException, ExecutionException, TimeoutException {
-            return get(l, timeUnit); }
+            return future.get(l, timeUnit);
+        }
 
         @Override public String toString() {
             return "CustomScheduledTask " + (runnable != null ? runnable.getClass().getName() : (callable != null ? callable.getClass().getName() : "[no Runnable or Callable!]"));
         }
     }
-    static class CustomScheduledExecutor extends ScheduledThreadPoolExecutor {
+    public static class CustomScheduledExecutor extends ScheduledThreadPoolExecutor {
         public CustomScheduledExecutor(int coreThreads) {
             super(coreThreads, new ScheduledThreadFactory());
+        }
+        public CustomScheduledExecutor(int coreThreads, ThreadFactory threadFactory) {
+            super(coreThreads, threadFactory);
         }
         protected <V> RunnableScheduledFuture<V> decorateTask(Runnable r, RunnableScheduledFuture<V> task) {
             return new CustomScheduledTask<V>(r, task);
